--- a/src/patternfly/components/Toolbar/templates/toolbar--item-chip-group.hbs
+++ b/src/patternfly/components/Toolbar/templates/toolbar--item-chip-group.hbs
@@ -1,5 +1,5 @@
-{{#> toolbar-item toolbar-item--modifier=(concat 'pf-m-chip-group ' toolbar-item-chip-group--modifier)}}
-  {{#> chip-group chip-group--modifier="pf-m-category"}}
+{{#> toolbar-item}}
+  {{#> chip-group}}
     {{#> chip-group-main}}
       {{#> chip-group-label chip-group-label--attribute=(concat 'id="' chip-group--id '-chip-group-label"')}}
         {{chip-group--label}}
