--- a/src/patternfly/demos/Toolbar/toolbar-template.hbs
+++ b/src/patternfly/demos/Toolbar/toolbar-template.hbs
@@ -149,7 +149,7 @@ Options: [
 
       {{!-- view toggle --}}
       {{#if toolbar-template--HasViewToggle}}
-        {{#> toolbar-group toolbar-group--modifier="pf-m-icon-button-group pf-m-align-right"}}
+        {{#> toolbar-group toolbar-group--modifier="pf-m-icon-button-group pf-m-align-end"}}
           {{#> toolbar-item}}
             {{#> button button--modifier="pf-m-plain pf-m-active" button--attribute='aria-label="Grid view"'}}
               <i class="fas fa-th" aria-hidden="true"></i>
