--- a/src/patternfly/demos/Masthead/masthead-template-content.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template-content.hbs
@@ -1,5 +1,5 @@
 {{#> masthead-content}}
-  {{#> toolbar toolbar--modifier="pf-m-full-height pf-m-static" toolbar--id=(concat masthead--id '-toolbar')}}
+  {{#> toolbar toolbar--modifier="pf-m-static" toolbar--id=(concat masthead--id '-toolbar')}}
     {{#> toolbar-content}}
       {{> masthead-template-content-toolbar-content}}
     {{/toolbar-content}}
